--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "@agm/core": "1.0.0-beta.2",
     "@angular/animations": "^5.2.11",
     "@angular/cdk": "^5.2.0",
-    "@angular/common": "^6.0.5",
+    "@angular/common": "5.2.11",
     "@angular/compiler": "^5.2.11",
     "@angular/core": "^5.2.11",
     "@angular/flex-layout": "5.0.0-beta.13",
@@ -28,7 +28,8 @@
     "@angular/service-worker": "^5.2.11",
     "angular-calendar": "^0.23.3",
     "angular-sortablejs": "^2.5.1",
-    "angular5-csv": "^0.2.10",
+    "angular2-csv": "^0.2.5",
+    "angular5-csv": "^0.2.11",
     "chart.js": "^2.7.2",
     "chart.piecelabel.js": "^0.9.0",
     "classlist.js": "^1.1.20150312",
@@ -40,7 +41,7 @@
     "moment": "^2.22.2",
     "ng-dynamic-component": "^3.0.0",
     "ngx-quill": "^2.1.1",
-    "node-sass": "^5.0.0",
+    "node-sass": "^4.14.1",
     "normalize.css": "^7.0.0",
     "quill": "^1.3.5",
     "rxjs": "^6.2.1",
@@ -59,6 +60,7 @@
     "@angular/compiler-cli": "^5.2.11",
     "@angular/language-service": "^5.2.11",
     "@types/chart.js": "^2.7.22",
+    "@types/lodash": "^4.14.112",
     "@types/lodash-es": "^4.17.0",
     "@types/stacktrace-js": "0.0.32",
     "codelyzer": "~4.1.0",
