--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
         "fast-csv": "^3.4.0",
         "formidable": "^1.2.1",
         "i": "^0.3.6",
+        "jade": "^1.11.0",
         "jsonwebtoken": "^8.2.0",
         "lodash": "^4.17.11",
         "moment": "^2.22.2",
